# puztrix_playdate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build_html.yml  build_mac.yml  build_playdate.yml  build_windows.yml
Source/graphics/: color.txt
Source/skins/Nintendo/: color.txt
assets/: arrows.psp  game.psp  tile.psp
metadata/appstream/: io.github.joyrider3774.puztrix.xml
metadata/desktopfile/: io.github.joyrider3774.puztrix.desktop
metadata/flatpakrecipe/: io.github.joyrider3774.puztrix.yml
metadata/rg35xxplusbatocera/: Puztrix.sh
metadata/trimuismartpro/: config.json  launch.sh
src/: caudio.cpp  caudio.h  cbox.cpp  cbox.h  codekey.h  credits.cpp  cselector.cpp  cselector.h  cworldpart.cpp  cworldpart.h  cworldparts.cpp  cworldparts.h  game.cpp  game.h  gamefuncs.cpp  gamefuncs.h  gameover.cpp  gameover.h  highscore.cpp  highscore.h  leveleditor.cpp  leveleditor.h  levelpackdone.cpp  levelpackdone.h  main.cpp  main.h  options.cpp  pd_helperfuncs.cpp  pd_helperfuncs.h  stageclear.cpp  stageclear.h  submitscore.cpp  submitscore.h  titlescreen.cpp
